force-app/main/default/objects/copado__Git_Org_Commit__c/fields/copado__Changes__c.field-meta.xml
<CustomField>
    <fullName>copado__Changes__c</fullName>
    <label>Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>