force-app/main/default/objects/copado__Git_Org_Commit__c/fields/copado__Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Commit_Message__c</fullName>
    <label>Commit Message</label>
    <type>TextArea</type>
</CustomField>