force-app/main/default/objects/copado__Git_Org_Commit__c/fields/copado__Git_Backup__c.field-meta.xml
<CustomField>
    <fullName>copado__Git_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Git Snapshot</label>
    <referenceTo>copado__Git_Backup__c</referenceTo>
    <relationshipName>Git_Org_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>