force-app/main/default/objects/copado__Git_Org_Commit__c/fields/copado__Git_Operation__c.field-meta.xml
<CustomField>
    <fullName>copado__Git_Operation__c</fullName>
    <description>The Git operation executed by the Copado.</description>
    <inlineHelpText>The Git operation executed by the Copado.</inlineHelpText>
    <label>Git Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commit Files</fullName>
                <default>true</default>
                <label>Commit Files</label>
            </value>
            <value>
                <fullName>Destructive Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>