force-app/main/default/objects/copado__Git_Org_Commit__c/fields/copado__Org__c.field-meta.xml
<CustomField>
    <fullName>copado__Org__c</fullName>
    <label>Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Snapshot Commits</relationshipLabel>
    <relationshipName>Git_Org_Commits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>